// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputErrorComponent should create and match snapshot 1`] = `
<md-input-error>
  <div
    class="md-input__messages"
    role="alert"
  >
    <div
      class="message"
    >

    </div>
  </div>
</md-input-error>
`;

exports[`InputErrorComponent should render a error message with correct text 1`] = `
<md-input-error
  error={[Function String]}
>
  <div
    class="md-input__messages"
    role="alert"
  >
    <div
      class="message"
    >
      This is where the success message would be.
    </div>
  </div>
</md-input-error>
`;
